Revamped sprite editor architecture, added pan&zoom

--- a/editor/editor.html
+++ b/editor/editor.html
@@ -9,6 +9,8 @@
     <link rel="stylesheet" href="/lib/codemirror/night.css">
 
     <link rel="stylesheet" href="/css/style.css">
+
+    <link rel="stylesheet" href="/css/painter.css">
   </head>
 
   <body>
