--- a/editor/painter-window.html
+++ b/editor/painter-window.html
@@ -2,7 +2,7 @@
 <html>
   <head>
     <meta charset="utf-8">
-    <meta name="viewport" content="width=device-width, initial-scale=1">
+    <meta name="viewport" content="width=device-width, initial-scale=1, maximum-scale=1">
     <title>ARDUBOY SpriteEditor</title>
     <style>
       body { padding: 0; margin: 0; width: 100vw; height: 100vh; overflow: hidden; }
@@ -10,228 +10,14 @@
         border: none; /*1px solid #999;*/
         background: #111;
       }
-      textarea {
-        font-size: 8px;
-        width: 100%;
-        background: black;
-        color: #aaa;
-        line-height: 1.5;
-        border: none;
-        padding: 5px;
-      }
     </style>
   </head>
 
   <body>
     <canvas id="draw" touch-action="none">
     </canvas>
-    <textarea id="spriteoutput" contenteditable="true" rows="10" cols="80"></textarea>
     <script src="/lib/pif/lib.js"></script>
-    <script>
-      window.pixels = new PixelData(`:empty:::::::::::
-        ........
-        ........
-        ........
-        ........
-        ........
-        ........
-        ........
-        ........`);
-
-      var canvas = document.getElementById("draw");
-      canvas.width = Math.min(window.innerWidth,window.innerHeight);
-      canvas.height = canvas.width * (pixels.h / pixels.w);
-      var bs = Math.floor( canvas.width / pixels.w );
-
-      var C = canvas.getContext("2d");
-
-
-      var newstate;
-      function postState() {
-        if (!newstate) return;
-
-        // Image dimensions
-        var w = pixels.w, h = pixels.h;
-
-        // Create bytestream
-        var bytes = pixels.bytes;
-
-        // Build transfer string
-        var transfer = pixels.serialize();
-
-        // Update sprite data in output textarea
-        document.getElementById("spriteoutput").textContent = "// w: " +pixels.w+ " h: " +pixels.h
-          + "\nPROGMEM const unsigned char " +pixels.id.replace(/\W/g,'_')+ "[] = { " +pixels.sprite+ " };\n";
-
-        console.log(pixels.pif);
-        console.log("Dimensions:\n", pixels.w, "x", pixels.h);
-        console.log("Sprite data:\n", "{ " +pixels.sprite+ " }");
-        console.log("Transfer data:\n", JSON.stringify(transfer));
-
-
-        // Reset state
-        newstate = null;
-
-        // Post bytedata
-        var r = new XMLHttpRequest();
-
-        r.open("POST", "/sprite");
-        r.setRequestHeader("Content-Type", "application/json");
-        r.onreadystatechange = function () { if (r.readyState != 4 || r.status != 200) return; };
-
-        r.send(
-          JSON.stringify({ sprite: transfer })
-        );
-      }
-
-      function display() {
-        var x,y;
-        C.clearRect(0,0,canvas.width,canvas.height);
-        C.fillStyle = "#eee";
-
-        y = 0;
-        while (y < pixels.h) {
-          x = 0;
-          while (x < pixels.w) {
-            if (pixels.bitmap[y][x]) {
-              C.fillRect(bs*x,bs*y, bs-1,bs-1);
-            } else {
-              C.clearRect(bs*x,bs*y, bs-1,bs-1);
-            }
-            ++x;
-          }
-          ++y;
-        }
-
-        window.requestAnimationFrame(display);
-      }
-
-      function update() {
-        // Don't update if drawing
-        if (paintstate) return;
-
-        // Post bytedata
-        var r = new XMLHttpRequest();
-
-        r.open("GET", "/sprite");
-        r.setRequestHeader("Content-Type", "application/json");
-        r.onreadystatechange = function () {
-          if (r.readyState != 4 || r.status != 200) return;
-
-          // Don't update if drawing
-          if (paintstate) return;
-
-          // Update bitmap
-          try {
-            update = new PixelData(JSON.parse(r.responseText));
-          }
-          catch(e) {
-            console.log(e);
-            return;
-          }
-
-          // No changes
-          if (pixels.equals(update)) return;
-
-          // Update canvas dimensions/blocksize
-          if (pixels.w !== update.w || pixels.h !== update.h) {
-            // Update blocksize
-            bs = update.w > update.h
-              ? Math.floor( canvas.width / update.w )
-              : Math.floor( canvas.height / update.h );
-
-            // Update canvas proportions
-            canvas.height = canvas.width * (update.h / update.w);
-          }
-
-          // Store updated bitmap data
-          pixels = update;
-
-          console.log("Bitmap updated:\n", pixels.pif);
-
-          // Update sprite data in output textarea
-          document.getElementById("spriteoutput").textContent = "// w: " +pixels.w+ " h: " +pixels.h
-            + "\nPROGMEM const unsigned char " +pixels.id.replace(/\W/g,'_')+ "[] = { " +pixels.sprite+ " };\n";
-         };
-
-        r.send();
-
-      }
-
-      function getDXY(x,y) {
-        return { x: Math.floor(x/bs), y: Math.floor(y/bs) };
-      }
-
-      function pixelAt(x,y) {
-        return {
-          x: Math.floor(x/bs),
-          y: Math.floor(y/bs),
-          color: pixels.bitmap[ Math.floor(y/bs) ][ Math.floor(x/bs) ]
-        };
-      }
-
-      var lastupdate;
-      var paintstate;
-      function ptrStart(e) {
-        var px = pixelAt(e.clientX, e.clientY);
-
-        // Draw or erase on whole stroke depending on pixel under finger
-        // on the initial touch
-        if (!paintstate) {
-          paintstate = px.color ? "erase" : "paint";
-        }
-
-        ptrUpdate(e);
-      }
-
-      function ptrEnd(e) {
-        lastupdate = null;
-
-        // Reset paint state
-        paintstate = null;
-
-        // Update output
-        if (newstate) {
-          window.requestAnimationFrame(postState);
-        }
-      }
-
-      function ptrUpdate(e) {
-        var px;
-
-        // Not drawing yet
-        if (!paintstate) return;
-
-        // Fetch pixel info under pointer
-        px = pixelAt(e.clientX, e.clientY);
-
-        // Check if crossed pixel boundaries, if not, do not do anything
-        if (lastupdate && lastupdate.x == px.x && lastupdate.y == px.y ) return;
-
-        // Update pixel under finger according to current paint state
-        pixels.bitmap[px.y][px.x] = ( paintstate === "paint" ? 1 : 0 );
-
-        // Last updated pixel
-        lastupdate = px;
-
-        newstate = 1;
-      }
-
-      canvas.addEventListener("pointerdown", ptrStart, false);
-      canvas.addEventListener("pointerup",   ptrEnd, false);
-      canvas.addEventListener("pointermove", ptrUpdate, false);
-
-      document.getElementById("spriteoutput").addEventListener("click",function() {
-        // Try to copy sprite to clipboard
-        this.focus();
-        this.select();
-
-        console.log( document.execCommand("copy") ? "Copied to clipboard." : "Copy data to clipboard manually." );
-      }, false);
-
-      window.requestAnimationFrame(display);
-      setInterval(update,2000);
-      </script>
-      <script src="/lib/pep/pep.js"></script>
+    <script src="/js/sprite-editor.js"></script>
+      <!--<script src="/lib/pep/pep.js"></script>-->
   </body>
 </html>
