Implements switching between compile targets, adds production Arduboy support
Fixes #13

--- a/editor/editor.html
+++ b/editor/editor.html
@@ -22,6 +22,8 @@
       </select>
       <select name="file">
       </select>
+      <select name="target">
+      </select>
     </aside>
 
     <form>
