Download current build button

--- a/editor/editor.html
+++ b/editor/editor.html
@@ -16,7 +16,7 @@
   <body>
     <aside class="toolbar">
       <button name="flash" title="Flash Arduboy...">⚡️</button>
-      <button name="download" title="Download sketch...">↓</button>
+      <button name="download" title="Download sketch...">💾</button>
       <select name="load">
         <option value="" default>---</option>
       </select>
