Initial MicroCanvas compile/flash support for Arduboy

--- a/editor/editor.html
+++ b/editor/editor.html
@@ -17,6 +17,7 @@
     <aside class="toolbar">
       <button name="flash" title="Flash Arduboy...">⚡️</button>
       <button name="download" title="Download sketch...">💾</button>
+      <button name="build" title="Rebuild MicroCanvas source and switch to C++ output">💱</button>
       <select name="load">
         <option value="" default>---</option>
       </select>
@@ -36,6 +37,7 @@
 
     <script src="/lib/codemirror/codemirror.js"></script>
     <script src="/lib/codemirror/clike.js"></script>
+    <script src="/lib/codemirror/javascript.js"></script>
 
     <script src="/lib/pif/lib.js"></script>
 
@@ -53,5 +55,6 @@
     <script src="/js/tunes.js"></script>
 
     <script src="/js/flasher.js"></script>
+    <script src="/js/microcanvas.js"></script>
   </body>
 </html>
