Improved UI for working with JS & INO files

--- a/editor/editor.html
+++ b/editor/editor.html
@@ -17,7 +17,7 @@
     <aside class="toolbar">
       <button name="flash" title="Flash Arduboy...">⚡️</button>
       <button name="download" title="Download sketch...">💾</button>
-      <button name="build" title="Rebuild MicroCanvas source and switch to C++ output">💱</button>
+      <button name="build" title="Rebuild and flash">💱</button>
       <select name="load">
         <option value="" default>---</option>
       </select>
