Microcanvas live previews

--- a/editor/editor.html
+++ b/editor/editor.html
@@ -18,6 +18,7 @@
       <button name="flash" title="Flash Arduboy...">⚡️</button>
       <button name="download" title="Download sketch...">💾</button>
       <button name="build" title="Rebuild and flash">💱</button>
+      <button name="preview" title="Preview">👁🗨</button>
       <select name="load">
         <option value="" default>---</option>
       </select>
