Microcanvas feature coverage improvements

--- a/editor/microcanvas.html
+++ b/editor/microcanvas.html
@@ -31,6 +31,6 @@
     <script src="/lib/microcanvas/microcanvas.js"></script>
     <script src="/lib/pif/lib.js"></script>
 
-    <script src="/edit/codeinvaders.js"></script>
+    <script src="/edit/"></script>
   </body>
 </html>
