Initial compiler Tunes support

--- a/editor/microcanvas.html
+++ b/editor/microcanvas.html
@@ -28,6 +28,9 @@
   <body>
     <canvas class="microcanvas" width="128" height="64"></canvas>
 
+    <script src="/js/util.js"></script>
+    <script src="/js/synth.js"></script>
+    <script src="/js/score.js"></script>
     <script src="/lib/microcanvas/microcanvas.js"></script>
     <script src="/lib/pif/lib.js"></script>
 
