--- a/microcanvas/index.html
+++ b/microcanvas/index.html
@@ -4,7 +4,7 @@
 <head><title>Test MicroCanvas parser</title></head>
 <body>
   <script>
-  fetch('http://localhost:9999/microcanvas/game.json')
+  fetch('game.json')
     .then(r => r.json())
     .then(r => console.log(window.game = r, 'loaded!'));
   </script>
