Advanced pixelsprite and game previews

--- a/editor/painter-window.html
+++ b/editor/painter-window.html
@@ -19,5 +19,6 @@
     <script src="/lib/pif/lib.js"></script>
     <script src="/js/sprite-editor.js"></script>
       <!--<script src="/lib/pep/pep.js"></script>-->
+    <script src="/js/interframe.js"></script>
   </body>
 </html>
