--- a/editor/microcanvas.html
+++ b/editor/microcanvas.html
@@ -35,14 +35,6 @@
     <script src="/lib/pif/lib.js"></script>
 
     <script src="/edit/"></script>
-    <script>
-      window.addEventListener('keypress', e => {
-        if (window.parent) window.parent.postMessage({
-          source: 'microcanvas_preview',
-          type: 'keypress',
-          value: e.key,
-        }, '*');
-      });
-    </script>
+    <script src="/js/interframe.js"></script>
   </body>
 </html>
