Use PIF & library in compiler/build

--- a/editor/bitmapparser.html
+++ b/editor/bitmapparser.html
@@ -68,6 +68,22 @@
         };
         `,
 
+        'Bats, multiframe, ASCII': `
+          ! bats 16x6x2
+          ##....#..#....##
+          .##...####...##.
+          .###.#.##.#.###.
+          .##############.
+          ...##########...
+          ....##.##.##....
+          ...#..#..#..#...
+          .#.##.####.##.#.
+          ######.##.######
+          ###.########.###
+          #.....####.....#
+          .......##.......
+        `,
+
         'Invader, multiframe, ASCII': `
         ! invader 9x8x3
         .........
