--- a/editor/bitmapparser.html
+++ b/editor/bitmapparser.html
@@ -113,7 +113,7 @@
         .#.#.#.#.
         .........
 `,
-      'invader, 2-bit palette, ASCII': `
+      'Invader, 2-bit palette, ASCII': `
       ! invader 9x8@2
       .........
       ..3...3..
@@ -124,6 +124,74 @@
       #.#.#.#.#
       .........
 `,
+      'Sonic, 3-bit palette, ASCII': `
+      ! sonic 16x16@#00a,#000,#55f,#a55,#fa5,#fff,#aaa
+      ....#####....#..
+      ..##333#3####3..
+      ....#3#4#333#3..
+      ....###54#333#..
+      ...###454#333#..
+      ..##3#45336333#.
+      .##33333376633#.
+      #33333333766232.
+      ######333766232.
+      ..####3337662222
+      ...####344662422
+      ..#3###455544522
+      .#3####45555554.
+      .#3#####455554..
+      ##########44....
+      ......####22....
+`,
+      'Grayscale blob, ASCII': `
+      ! grayscale 5x5@4
+      .....
+      ..#..
+      ..#..
+      ..#..
+      .....
+
+      .....
+      ..#..
+      .###.
+      ..#..
+      .....
+
+      ..#..
+      .###.
+      .###.
+      .###.
+      ..#..
+
+      .###.
+      #####
+      #####
+      #####
+      .###.
+`,
+      'Sonic grayscale, C-style': `
+      PROGMEM const unsigned char grayscale_sonic[] = {
+        /*16x16@4*/
+        0x00, 0x00, 0x00, 0x00, 0x00, 0x00, 0x00, 0x00,
+        0x00, 0x00, 0xe0, 0xc0, 0x00, 0x00, 0x00, 0x00,
+        0x00, 0x00, 0x00, 0x00, 0x00, 0x00, 0x00, 0x00,
+        0x00, 0x00, 0x07, 0x07, 0x00, 0x00, 0x00, 0x00,
+
+        0x00, 0x00, 0x00, 0x00, 0x00, 0x00, 0x00, 0x38,
+        0x00, 0xc0, 0x00, 0x00, 0x00, 0x00, 0x00, 0x00,
+        0x00, 0x00, 0x00, 0x00, 0x00, 0x00, 0x00, 0x00,
+        0x18, 0x3b, 0x38, 0x30, 0x30, 0x18, 0x00, 0x00,
+
+        0x00, 0x80, 0x80, 0xc0, 0xe2, 0xc6, 0xf2, 0xc4,
+        0xfa, 0x24, 0x1c, 0x3c, 0x78, 0xe6, 0x00, 0x00,
+        0x00, 0x00, 0x30, 0x08, 0x00, 0x00, 0x03, 0x1f,
+        0x27, 0x04, 0x40, 0x48, 0x08, 0x25, 0x10, 0x00,
+
+        0x80, 0x40, 0x62, 0x32, 0x1d, 0x39, 0x0d, 0x03,
+        0x05, 0x1a, 0x02, 0x02, 0x06, 0x19, 0x60, 0x00,
+        0x41, 0x71, 0x4b, 0x77, 0x7f, 0x7f, 0xfc, 0xe0,
+        0xc0, 0xc0, 0x00, 0x00, 0x00, 0x00, 0x00, 0x00
+      }`,
       }
       document.querySelector('select').innerHTML = (
         Object.keys(examples).map(l => `<option>${l}</option>`).join('')
@@ -157,8 +225,49 @@
       window.currentFrame = 0
       window.currentSprite
       setInterval(_ => {
-        framestrip.clearRect(0,0, framestrip.width,framestrip.height)
-        framestrip.drawImage(window.currentSprite[window.currentFrame % (window.currentSprite.length||1)], 0,0)
+        let s = window.currentSprite, px = s.pixeldata
+        const fr = window.currentFrame
+        let frame = fr % (s.length||1)
+
+        // Color sprites
+        if (px.bpp > 1) {
+          // Multicolor sprite
+          if (px.palette && px.palette.length > 2) {
+            if (fr % 6 === 0) {
+              // Display with original color palette
+              window.currentSprite = s = mc.loadSprite(s.pixeldata.$host || s.pixeldata)
+
+            // Display with greyscale palette
+          } else if (fr % 6 === 3){
+              window.currentSprite = s = mc.loadSprite(s.pixeldata.grayscale())
+            }
+
+            framestrip.clearRect(0,0, framestrip.width,framestrip.height)
+            framestrip.drawImage(s[frame], 0,0)
+
+
+          // Greyscale C-sprite
+          } else if (px.palette && px.palette.length == 2) {
+            // Draw frames on top of each other
+            window.currentSprite = s = mc.loadSprite(px.colors( [ [0,0,0,0], [255,255,255,64] ] ))
+
+            framestrip.globalCompositeOperation = 'lighter';
+
+            // Only clear for first frame
+            if (fr % 4 === 0) {
+              framestrip.clearRect(0,0, framestrip.width,framestrip.height)
+            }
+
+            if (frame>2) framestrip.drawImage(s[3], 0,0)
+            if (frame>1) framestrip.drawImage(s[2], 0,0)
+            if (frame>0) framestrip.drawImage(s[1], 0,0)
+            framestrip.drawImage(s[0], 0,0)
+          }
+
+        } else {
+          framestrip.clearRect(0,0, framestrip.width,framestrip.height)
+          framestrip.drawImage(s[frame], 0,0)
+        }
 
         window.currentFrame++
       }, 700)
@@ -183,7 +292,7 @@
         sidebar.log(px.id||'?')
         sidebar.log(`${px.w}×${px.h} pixels`)
         if (px.frames) sidebar.log(px.frames+' frames')
-        if (px.palette>1) sidebar.log(px.palette+' bit color')
+        if (px.palette>1) sidebar.log(px.bpp+' bits per pixel ('+(1<<(px.bpp-1))+' colors)')
 
         window.currentSprite = sprite
         window.currentFrame = 0
