fix Complete overhaul of backend, build & microcanvas compilation, various bugs fixed

--- a/editor/editor.html
+++ b/editor/editor.html
@@ -20,9 +20,10 @@
 
   <body>
     <aside class="toolbar">
-      <button name="flash" title="Flash Arduboy...">⚡️</button>
+      <button name="convert" title="Convert">💱</button>
+      <button name="compile-and-flash" title="Compile &amp; flash">⚡️</button>
       <button name="download" title="Download sketch...">💾</button>
-      <button name="build" title="Rebuild and flash">💱</button>
+      <button name="flash" title="Remote flash via connected Flasher">🌠</button>
       <button name="preview" title="Preview">👁</button>
       <select name="load">
         <option value="" default>---</option>
