work-in-progress bits

--- a/editor/importer.html
+++ b/editor/importer.html
@@ -23,6 +23,8 @@
     <button id="incheight">&uarr;&darr;</button>
     <div id="image"></div>
     <canvas id="canvas" width="128" height="64"></canvas>
+
+    <script src="/lib/pif/lib.js"></script>
     <script src="js/importer.js"></script>
   </body>
 </html>
