--- a/editor/bitmapparser.html
+++ b/editor/bitmapparser.html
@@ -42,160 +42,15 @@
     <script>(function(){
       'use strict'
 
-      const examples = {
-        'Invader, C-style': `
-          PROGMEM const unsigned char invader[] = { /*9x8*/ 0x70, 0x38, 0x6a, 0x3c, 0x78, 0x3c, 0x6a, 0x38, 0x70 }
-        `,
+      fetch('/dist/bitmaps.json').then(r => r.json()).then(examples => {
+        window.examples = examples
 
-        'Invader, ASCII': `
-          ! invader 9x8
-          .........
-          ..#...#..
-          ...#.#...
-          .#######.
-          ##.###.##
-          #########
-          #.#.#.#.#
-          .........
-        `,
+        document.querySelector('select').innerHTML = (
+          Object.keys(examples).map(l => `<option>${l}</option>`).join('')
+        )
 
-        'Bats, multiframe, C-style': `
-        PROGMEM const unsigned char bats[] = { /*16x6x2*/
-          0x01, 0x0f, 0x0e, 0x1c, 0x38, 0x3c, 0x1b, 0x3e,
-          0x3e, 0x1b, 0x3c, 0x38, 0x1c, 0x0e, 0x0f, 0x01,
-          0x1c, 0x0e, 0x0c, 0x07, 0x0e, 0x0c, 0x1b, 0x3e,
-          0x3e, 0x1b, 0x0c, 0x0e, 0x07, 0x0c, 0x0e, 0x1c,
-        };
-        `,
-
-        'Bats, multiframe, ASCII': `
-          ! bats 16x6x2
-          ##....#..#....##
-          .##...####...##.
-          .###.#.##.#.###.
-          .##############.
-          ...##########...
-          ....##.##.##....
-          ...#..#..#..#...
-          .#.##.####.##.#.
-          ######.##.######
-          ###.########.###
-          #.....####.....#
-          .......##.......
-        `,
-
-        'Invader, multiframe, ASCII': `
-        ! invader 9x8x3
-        .........
-        ..#...#..
-        ...#.#...
-        .#######.
-        ##.###.##
-        #########
-        #.#.#.#.#
-        .........
-
-        .........
-        ...#.#...
-        ...#.#...
-        .#######.
-        ###.##.##
-        #########
-        .#.#.#.#.
-        .........
-
-        .........
-        ...#.#...
-        ...#.#...
-        .#######.
-        ##.##.###
-        #########
-        .#.#.#.#.
-        .........
-`,
-      'Invader, 2-bit palette, ASCII': `
-      ! invader 9x8@2
-      .........
-      ..3...3..
-      ...3.3...
-      .#######.
-      ##2###2##
-      #########
-      #.#.#.#.#
-      .........
-`,
-      'Sonic, 3-bit palette, ASCII': `
-      ! sonic 16x16@#00a,#000,#55f,#a55,#fa5,#fff,#aaa
-      ....#####....#..
-      ..##333#3####3..
-      ....#3#4#333#3..
-      ....###54#333#..
-      ...###454#333#..
-      ..##3#45336333#.
-      .##33333376633#.
-      #33333333766232.
-      ######333766232.
-      ..####3337662222
-      ...####344662422
-      ..#3###455544522
-      .#3####45555554.
-      .#3#####455554..
-      ##########44....
-      ......####22....
-`,
-      'Grayscale blob, ASCII': `
-      ! grayscale 5x5@4
-      .....
-      ..#..
-      ..#..
-      ..#..
-      .....
-
-      .....
-      ..#..
-      .###.
-      ..#..
-      .....
-
-      ..#..
-      .###.
-      .###.
-      .###.
-      ..#..
-
-      .###.
-      #####
-      #####
-      #####
-      .###.
-`,
-      'Sonic grayscale, C-style': `
-      PROGMEM const unsigned char grayscale_sonic[] = {
-        /*16x16@4*/
-        0x00, 0x00, 0x00, 0x00, 0x00, 0x00, 0x00, 0x00,
-        0x00, 0x00, 0xe0, 0xc0, 0x00, 0x00, 0x00, 0x00,
-        0x00, 0x00, 0x00, 0x00, 0x00, 0x00, 0x00, 0x00,
-        0x00, 0x00, 0x07, 0x07, 0x00, 0x00, 0x00, 0x00,
-
-        0x00, 0x00, 0x00, 0x00, 0x00, 0x00, 0x00, 0x38,
-        0x00, 0xc0, 0x00, 0x00, 0x00, 0x00, 0x00, 0x00,
-        0x00, 0x00, 0x00, 0x00, 0x00, 0x00, 0x00, 0x00,
-        0x18, 0x3b, 0x38, 0x30, 0x30, 0x18, 0x00, 0x00,
-
-        0x00, 0x80, 0x80, 0xc0, 0xe2, 0xc6, 0xf2, 0xc4,
-        0xfa, 0x24, 0x1c, 0x3c, 0x78, 0xe6, 0x00, 0x00,
-        0x00, 0x00, 0x30, 0x08, 0x00, 0x00, 0x03, 0x1f,
-        0x27, 0x04, 0x40, 0x48, 0x08, 0x25, 0x10, 0x00,
-
-        0x80, 0x40, 0x62, 0x32, 0x1d, 0x39, 0x0d, 0x03,
-        0x05, 0x1a, 0x02, 0x02, 0x06, 0x19, 0x60, 0x00,
-        0x41, 0x71, 0x4b, 0x77, 0x7f, 0x7f, 0xfc, 0xe0,
-        0xc0, 0xc0, 0x00, 0x00, 0x00, 0x00, 0x00, 0x00
-      }`,
-      }
-      document.querySelector('select').innerHTML = (
-        Object.keys(examples).map(l => `<option>${l}</option>`).join('')
-      )
+        load(dropdown.value)
+      }).catch(err => console.log('[!] Cannot load built-in examples! ', err))
 
       const editor = CodeMirror.fromTextArea(
         document.getElementById("codeeditor"),
@@ -217,10 +72,9 @@
       document.querySelector('canvas').classList.add('microcanvas');
 
       const mc = new MicroCanvas(framestrip)
-      load(dropdown.value)
 
       window.editor = editor
-      window.examples = examples
+      window.examples = window.examples || {}
 
       window.currentFrame = 0
       window.currentSprite
@@ -273,7 +127,7 @@
       }, 700)
 
       function load(label) {
-        let val = trimmed(examples[label]) || Object.values(examples)[0]
+        let val = trimmed(window.examples[label]) || Object.values(window.examples)[0]
 
         editor.setValue(val)
       }
