--- a/editor/editor.html
+++ b/editor/editor.html
@@ -52,9 +52,11 @@
     <script src="/lib/codemirror/clike.js"></script>
     <script src="/lib/codemirror/javascript.js"></script>
 
-    <script src="/lib/pif/lib.js"></script>
+    <script src="/lib/microcanvas-pixeldata/pixeldata.js"></script>
 
-    <script src="/js/main.js"></script>
+    <script src="/editor-bundle"></script>
+    <script>Clouduboy()</script>
+<!--    <script src="/js/main.js"></script>
     <script src="/js/util.js"></script>
 
     <script src="/js/codeplugin.js"></script>
@@ -69,5 +71,6 @@
 
     <script src="/js/flasher.js"></script>
     <script src="/js/microcanvas.js"></script>
+  -->
   </body>
 </html>
