--- a/editor/microcanvas.html
+++ b/editor/microcanvas.html
@@ -2,64 +2,7 @@
 <html>
   <head>
     <title>MicroCanvas</title>
-    <style>
-    canvas {
-      image-rendering: -moz-crisp-edges;         /* Firefox */
-      image-rendering: -webkit-optimize-contrast;/* Webkit (non-standard naming) */
-      image-rendering: crisp-edges;
-      image-rendering: pixelated;
-    }
-    html,body {
-      width: 100%;
-      height: 100%;
-      margin: 0;
-      overflow:hidden;
-      background: black;
-      display: flex;
-      justify-content: center;
-      align-items: center;
-    }
-
-    canvas {
-      width: 60vw;
-    }
-
-    button {
-      position: absolute;
-      width: 8vw;
-      height: 6vw;
-      top: 0;
-
-      margin: 2vw;
-      padding: 0;
-
-      display: flex;
-      justify-content: center;
-      align-items: center;
-    }
-
-    button {
-      right: 10vw;
-    }
-    button + button {
-      right: 0;
-    }
-
-    button {
-      border: none;
-      background-color: rgba(153, 119, 255, .8);
-      color: rgba(255,255,255, .95);
-    }
-    button:hover {
-      background-color: #97F;
-    }
-
-    svg {
-      width: 4vw;
-      height: 4vw;
-      fill: currentColor;
-    }
-    </style>
+    <link rel="stylesheet" href="/styles?q=microcanvas">
   </head>
   <body>
     <canvas class="microcanvas" width="128" height="64"></canvas>
