--- a/editor/editor.html
+++ b/editor/editor.html
@@ -20,11 +20,10 @@
 
   <body>
     <aside class="toolbar">
-      <button name="convert" title="Convert">💱</button>
-      <button name="compile-and-flash" title="Compile &amp; flash">⚡️</button>
-      <button name="download" title="Download sketch...">💾</button>
-      <button name="flash" title="Remote flash via connected Flasher">🌠</button>
-      <button name="preview" title="Preview">👁</button>
+      <button name="convert" title="Translate to Arduino C code...">💱</button>
+      <button name="compile-and-flash" title="Compile &amp; flash...">⚡️</button>
+      <button name="download" title="Compile &amp; download...">💾</button>
+      <button name="preview" title="Test / preview">👁</button>
       <select name="load">
         <option value="" default>---</option>
       </select>
